--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,14 @@
 {
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "dist"
+        },
+        "buildCommand": "npm run prebuild && npm run build"
+      }
+    ],
     "routes": [
       {
         "src": "/(.*)",
